--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,8 +1,10 @@
 footer {
-    position: fixed;
+    position: absolute;
     bottom: 0;
-    background-color: #00FF00;
+    background-color: white;
     height: 60px;
     width: 100%;
     text-align: center;
+    border-top: 1px solid #CCCCCC;
+    display: grid;
 }
