--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,48 +1,44 @@
-.filters {
-	background-color: white;
-	height: 70px;
-	width: 100%;
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;	
+.filters{
+    background-color: white;
+    height: 70px;
+    width: 100%;
+    border: solid 1px #DDDDDD;
+    border-radius: 4px;
+    text-align: right;
 }
 
-.locations {
-	height: 100%;
-	width: 25%;
-	margin-left: 45px;
-	border-right: 1px solid #DDDDDD;
+section.filters button{
+    margin-top: 11px;
+    margin-bottom: 11px;
+    margin-right: 30px;
+    font-size: 18px;
+    background-color: #FF5A5F;
+    color: white;
+    height: 48px;
+    width: 20%;
+    border: none;
+    border-radius: 4px;
 }
-
-.amenities {
-	height: 100%;
+.locations, .amenities{
+    text-align: left;
+    height: 100%;
     width: 25%;
-    border-right: none;
-	margin-left: 45px;
+    border-right: solid 1px #DDDDDD;
+    margin-left: 30px;
+    float: left;
 }
-
 h3 {
-	font-weight: 600;
-	margin-top: 12px;
-	margin-bottom: 5px;	
+    margin: 0;
+    padding: 0;
+    font-weight: 600;
+    margin-top: 17px;
 }
-
 h4 {
-	font-size: 14px;
-	font-weight: 400;
-	margin: 0;
+    margin: 0;
+    padding: 0;
+    font-weight: 400;
+    font-size: 14px;
 }
-
-button {
-	color: #FFFFFF;
-	font-size: 18px;
-	height: 48px;
-	width: 20%;
-	background-color: #FF5A5F;
-	border-style: none;
-	border-radius: 4px;
-	float: right;
-	margin-top: 11px;
-	margin-bottom: 11px;
-	margin-right: 30px;
-    opacity: 90%;
+section.filters button:hover {
+    opacity: 0.9px;
 }
