--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,85 +1,81 @@
 .filters {
-	background-color: white;
-	height: 70px;
-	width: 100%;
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;	
+    background-color: white;
+    height: 70px;
+    width: 100%;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
-
+  
+button {
+    font-size: 18px;
+    background-color: #ff5a5f;
+    color: #ffffff;
+    height: 48px;
+    width: 20%;
+    border: none;
+    border-radius: 4px;
+    margin-left: auto;
+    margin-right: 30px;
+}
+  
 .locations {
-	height: 100%;
-	width: 25%;
-	margin-left: 45px;
-	border-right: 1px solid #DDDDDD;
+    border-right: #dddddd solid 1px;
 }
-
-.amenities {
-	height: 100%;
+  
+.locations,.amenities {
+    height: 100%;
     width: 25%;
-    border-right: none;
-	margin-left: 45px;
+    position: relative;
+    z-index: 1;
 }
-
+  
+.locations h3,.amenities h3 {
+    font-weight: 600;
+    margin: 0;
+    padding: 17px 30px 0 30px;
+  }
+  
+.locations h4,.amenities h4 {
+    font-weight: 400;
+    font-size: 14px;
+    margin-top: 0;
+    padding-left: 30px;
+}
+  
 .popover {
-	list-style-type: none;
-	display: none;
-	background-color: #FAFAFA;
-	width: 100%;
-
-	margin-left: -1px;
-	margin-top: 8px;
-	padding: 25px 0px;
-
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;
+    padding: 0;
+    margin: 0;
+    background: #FAFAFA;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+    display: none;
+    position: absolute;
+    width: 100%;
 }
 
-.locations:hover .popover {
-	display: inline-block;
-}
-
-.filter_amenities:hover .popover {
-	display: inline-block;
-}
-
-ul {
-	list-style-type: none;
-	padding: 0px;
-	padding-bottom: 20px;
-}
-
-li {
-    list-style: none;
+.locations:hover .popover,
+.amenities:hover .popover {
+    display: block;
 }
 
 h2 {
     font-size: 16px;
+    margin: 0;
+    padding: 10px 0px 0px 30px;
+}
+  
+ul {
     list-style: none;
+    margin: 0;
+}
+  
+li {
+    margin: 12px;
 }
 
-h3 {
-	font-weight: 600;
-	margin-top: 12px;
-	margin-bottom: 5px;	
-}
-
-h4 {
-	font-size: 14px;
-	font-weight: 400;
-	margin: 0;
-}
-
-button {
-	color: #FFFFFF;
-	font-size: 18px;
-	height: 48px;
-	width: 20%;
-	background-color: #FF5A5F;
-	border-style: none;
-	border-radius: 4px;
-	float: right;
-	margin-top: 11px;
-	margin-bottom: 11px;
-	margin-right: 30px;
+button:hover {
     opacity: 90%;
 }
