--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,26 +1,28 @@
 .places {
-	display: flex;
-	margin: 45px auto;
-	text-align: center;
+    text-align: center;
+}
+.places h1 {
+    font-size: 30px;
+    vertical-align: top;
+    text-align: left;
+    padding: 25px 0 0 30px;
+    margin: 0;
 }
 
 article {
-	width: 390px;
-	padding: 20px;
-	margin: 20px;
-	border: 1px solid #FF5A5F;
-	border-radius: 4px;
+    width: 390px;
+    padding: 20px;
+    margin: 20px;
+    border: 1px #FF5A5F solid;
+    border-radius: 4px;
+    display: inline-block;
+    text-align: center;
+
 }
 
-h1 {
-    margin-right: auto;
+.places h2 {
     font-size: 30px;
-    width: 100%;
-    margin-bottom: 0;
-}
-
-article h2 {
-	font-size: 30px;
-	padding: 0px;
-	margin: auto;
+    text-align: center;
+    padding-top: 0;
+    padding-bottom: 0;
 }
