--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,118 +1,97 @@
+article h2,
+article .price_by_night {
+    display: inline-flex;
+}
 .places {
-	display: flex;
-	margin: 45px auto;
-	text-align: center;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    width: 100%;
+}
+.places article {
+    border: 1px solid #ff5a5f;
+    border-radius: 4px;
+    margin: 20px;
+    padding: 20px;
+    width: 390px;
+}
+  
+.places h1 {
+    font-size: 30px;
+    font-weight: bold;
+    margin: .67em 0 .67em 0;
+    width: 100%;
+}
+  
+.places h2 {
+    font-size: 30px;
+    font-weight: bold;
+    margin: 0 auto;
+    text-align: center;
+
+}
+footer {
+    position: relative;
 }
 
-article {
-	display: flex;
-	width: 390px;
-	flex: none;
-	flex-wrap: wrap;
-	flex-direction: row;
-	align-content: flex-start;
-
-	padding-top: 10px;
-	padding-right: 20px;
-	padding-left: 20px;
-	padding-bottom: 20px;
-	margin: 20px;
-
-	border: 1px solid #FF5A5F;
-	border-radius: 4px;
-}
-
-.headline {
-	display: flex;
-	flex-direction: row;
-	position: relative;
-
-	height: 80px;	
-	width: 100%;
+.places .name_and_price {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 20px;
 }
 
 .price_by_night {
-	display: flex;
-	justify-content: center;
-	align-self: flex-end;
 
-	position: absolute;
-	right: 0;
-
-	line-height: 60px;
-	color: #FF5A5F;
-	font-size: 30px;
-	padding: 5px;
-	border: 4px solid #FF5A5F;
-	border-radius: 100%;
-	float: right;
-	min-width: 60px;
-	height: 60px;
+    color: #ff5a5f;
+    border: 4px solid #ff5a5f;
+    border-radius: 50%;
+    min-width: 60px;
+    height: 60px;
+    padding: 20px 10px 0px 10px;
+    margin-left: 40px;
+    font-size: 30px;
+    text-align: center; 
+}
+.information {
+    align-items: center;
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    display: flex;
+    height: 80px;
+    justify-content: space-around;
+    margin-top: 10px;
 }
 
-.information {
-    height: 80px;
-    border-bottom:  #DDDDDD 1px;
-    border-top: #DDDDDD 1px;;
+.max_guest{
+    background: url("../images/icon_group.png");
+    width: 100px;
+    height: 100%;
+}
+
+.number_rooms{
+    background: url("../images/icon_bed.png");
+    width: 100px;
+    height: 100%;
+}
+
+.number_bathrooms{
+    background: url("../images/icon_bath.png");
+    width: 100px;
+    height: 100%;
+}
+
+.max_guest,
+.number_rooms,
+.number_bathrooms{
+    background-repeat: no-repeat;
+    background-position: center;
     display: flex;
     justify-content: center;
-    align-items: center;
-    border-top: 1px solid #DDDDDD;
-    border-bottom: 1px solid #DDDDDD;
+    align-items: end;
 }
-
-.max_guest, .number_rooms, .number_bathrooms {
-	position: relative;
-	width: 100px;
-	height: 100%;
-}
-
 .user {
-	margin-top: 5px;
-	margin-bottom: 5px;	
-}
-
-.description {
-	text-align: left;
-}
-
-h1 {
-	display: block;
-	text-align: left;
-	width: 95%;
-	display: block;
-	margin-top: 0px;
-	margin-left: 20px;
-	margin-bottom: 5px;
-	font-size: 30px;
-}
-
-h2 {
-	font-size: 30px;
-	margin: 10px auto;
-	padding: 0px;
-}
-
-.guest_icon {
-    height: 65px;
-    width: 100px;
-    background: url("../images/icon_group.png");
-    background-repeat: no-repeat;
-    margin-left: 35px;
-}
-
-.bed_icon {
-    height: 65px;
-    width: 100px;
-    background: url("../images/icon_bed.png");
-    background-repeat: no-repeat;
-    margin-left: 35px;
-}
-
-.bath_icon {
-    height: 65px;
-    width: 100px;
-    background: url("../images/icon_bath.png");
-    background-repeat: no-repeat;
-    margin-left: 35px;
+    padding: 20px 0;
+    text-align: left;
 }
